Fix progress bar background colours not showing up against our wells

--- a/less/theme-cyborg/bootswatch.less
+++ b/less/theme-cyborg/bootswatch.less
@@ -572,7 +572,7 @@ select:focus {
 }
 
 .progress {
-	background-color: #060606;
+	background-color: @grayDark;
 	background-image: none;
 	.border-radius(0);
 }
