--- a/less/theme-slate/bootswatch.less
+++ b/less/theme-slate/bootswatch.less
@@ -484,8 +484,8 @@ a.thumbnail:hover {
 }
 
 .progress {
-	background-color: darken(@grayDarker, 3%);
-	#gradient > .vertical(darken(@grayDarker, 3%), darken(@grayDarker, 3%));
+	background-color: lighten(@grayDarker, 4%);
+	#gradient > .vertical(lighten(@grayDarker, 4%), lighten(@grayDarker, 4%));
 	.box-shadow(inset 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
